--- a/projects.html
+++ b/projects.html
@@ -2713,7 +2713,7 @@
     <link
       rel="stylesheet"
       id="ashade-google-fonts-css"
-      href="http://fonts.googleapis.com/css?family=Roboto+Condensed%3A400%2C700%7CMontserrat%3A500%2C700%7CRoboto%3A700"
+      href="https://fonts.googleapis.com/css?family=Roboto+Condensed%3A400%2C700%7CMontserrat%3A500%2C700%7CRoboto%3A700"
       type="text/css"
       media="all"
     />
